add: get user creatures and buy creature in user service
