# user/user-service-openapi.yaml
@@ -17,7 +17,7 @@ tags:
 - name: users
   description: Operations available to regular users
 paths:
-  /users:
+  /api/user:
     get:
       tags:
       - users
@@ -32,7 +32,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AllUsers'
-  /users/{userid}:
+  /api/user/{userid}:
     get:
       tags:
       - users
@@ -56,7 +56,7 @@ paths:
         "400":
           description: bad input parameter
 
-  /users/register:
+  /api/user/register:
     post:
       tags:
       - users
@@ -79,7 +79,7 @@ paths:
         "409":
           description: User already exists
 
-  /creature:
+  /api/user/creatures:
     get:
       tags:
       - users
@@ -95,7 +95,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/AllCreatures'
 
-  /creature/buy/{creatureId}:
+  /creatures/buy/{creatureId}:
     post:
       tags:
       - users
